# inkmlrs

./: .gitignore  Cargo.toml  README.md  file1.inkml  flake.nix
crates/inkmlrs/: Cargo.toml
crates/inkmlrs/src/: error.rs  inkml.rs  main.rs  parse.rs
flake-parts/: cargo.nix
src/: inkml.rs  main.rs  parse.rs
src/render/: mod.rs  shaders.rs
